--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.3",
-    "@angular/cli": "6.0.3",
+    "@angular/cli": "^7.3.4",
     "@angular/compiler-cli": "^6.0.2",
     "@angular/language-service": "^6.0.2",
     "@types/jasmine": "^2.8.7",
@@ -74,7 +74,6 @@
     "rxjs-tslint": "^0.1.4",
     "ts-node": "^3.3.0",
     "tslint": "^5.10.0",
-    "typescript": "2.7.2",
-    "webpack": "^4.8.3"
+    "typescript": "2.7.2"
   }
 }
