--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -16,5 +16,8 @@
     "src/test.ts",
     "**/*.spec.ts",
     "../node_modules/api-ai-javascript/ts/Request/TTSRequest.ts"
-  ]
+  ],
+  "files": [
+    "app/app.module.ts"
+    ]
 }
